small alignment fix

--- a/public/joeCSS.css
+++ b/public/joeCSS.css
@@ -1,20 +1,31 @@
 body {
     background-color: #181C25;
-    font-family: Quicksand;
+    font-family: Quicksand, "JetBrains Mono", monospace;
+    size: 100px;
+    text-align: center;
 }
 h1 {
     color: orange;
 }
+
+title {
+    text-align: center ;
+}
 ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+    list-style-type:none;
+    margin: 0%;
+    padding: 0%;
     overflow: hidden;
     background-color: #333;
+
+}
+span {
+    float: left;
 }
 
 li {
     float: left;
+
 }
 li a {
     display: flow-root;
@@ -22,6 +33,7 @@ li a {
     text-align: center;
     padding: 14px 126px;
     text-decoration: #211919 wavy overline underline;
+
 }
 
 
@@ -33,11 +45,17 @@ p {
     margin-top: 30px;
 }
 #chomp {
-    display: contents;
+    align-items: center;
+    align-self: flex-start;
+    float: left;
 }
 a {
     color: lavenderblush;
 }
+div {
+    padding: 20px 50px 20px 50px;
+}
+
 .glow {
     font-size: 30px;
     color: #fff;
